--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+
+body{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.form{
+  margin-top: 25%;
+  width: 500px;
+  background-color: #eeeeee;
+  padding: 0 30px;
+  display: grid;
+  gap: 20px;
+  padding-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  width: 100%;
+  padding: 10px;
+}
+
+.otpverify{
+  width: 100%;
+  display: flex;
+  gap:20px;
+}
+
+.btn{
+  padding: 10px;
+  background-color: #82eec1;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 150px;
+}
+
+.otpverify{
+  display: none;
 }
